# parse-records

./: .gitignore  README.md  pyproject.toml
notebooks/: 0_test_functions.ipynb  0_unzip_records.ipynb  1_test_functions.ipynb  1_unzip_records.ipynb  2_emd_structure.ipynb  3_xml_to_json.ipynb  4_make_table.ipynb  4_make_table_epic.ipynb  5_make_table_lab.ipynb  6_transform_lab_data.ipynb  7.1_transform_epic_data.ipynb  7.2_transform_epic_data.ipynb  7_transform_epic_data.ipynb  8.1_make_models.ipynb  8.2_make_models.ipynb  8_catboost_on_embeds.ipynb  8_make_automl.ipynb  8_transformers_training.ipynb  9_llm_features_pipeline.ipynb  README.md  transformers_training.ipynb
scripts/: converter.py  parse_desease_features.py  parse_xml_to_json.py  parser_amnez_disease.py  parser_condition.py  parser_diagn.py  parser_epic.py  parser_fucn.py  parser_gospital.py  parser_lab.py  parser_sex_age.py  parser_wards.py  parses_amnez_life.py  regex.py
scripts/mixin/: parcer_functions.py
