[tool.poetry]
name = "parse-records"
version = "0.1.0"
description = ""
authors = ["Konstantin Burkin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
patool = "^2.4.0"
unrar = "^0.4"
pyunpack = "^0.3"
graphviz = "^0.20.3"
tqdm = "^4.66.5"
pyarrow = "^17.0.0"
fastparquet = "^2024.5.0"
polars = "^1.9.0"
openpyxl = "^3.1.5"
catboost = "^1.2.7"
torch = "^2.5.1"
transformers = "^4.46.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
